<resources>
    <string name="settings_alertOnGreenLightEnabledTitle">Enable Alert On Green Light</string>
    <string name="settings_alertOnGreenLightEnabledSummary">Touch a red traffic light and you will be notified when it changes</string>
    <string name="settings_displayKey">bDebug</string>
    <string name="settings_alertOnGreenLightEnabledKey">alertOnGreenLightEnabled</string>
    <string name="settings_userEmailKey">userEmail</string>
    <string name="settings_userPrivacyKey">userPrivacy</string>
    <string name="settings_ttsSaluteKey">ttsSaluteKey</string>
    <string name="android:versionName">SpeedZone</string>
    <string name="settings_debugVerbosityKey">debugVerbosity</string>
    <string name="settings_VersionKey">settings_VersionKey</string>
    <string name="settings_ttsSignFoundKey">ttsSignFoundKey</string>
    <string name="settings_bExperimentalKey">bExperimental</string>
    <string name="settings_Alert_title">Point Savers :)</string>
    <string name="settings_Alert_Summery">Choose how much the app prompts you</string>
    <string name="settings_Settings_title">Settings</string>
    <string name="settings_Settings_Summery">Choose your sound and display settings</string>
    <string name="settings_Features_title">Features</string>
    <string name="settings_Features_Summary">Choose enable or disable features</string>
    <string name="settings_Options_title">Options</string>
    <string name="settings_Options_Summary">Customise how the application interacts</string>
    <string name="settings_Reference_title">Reference</string>
    <string name="settings_Reference_Summary">Choose your Reference</string>
    <string name="settings_aboutTitle">About</string>
    <string name="settings_aboutSummary">Find out more about the developers</string>
    <string name="settings_userPrivacyTitle">Privacy Statement</string>
    <string name="settings_userPrivacySummary">We respect your right to anonymity</string>
    <string name="settings_debugVerbosityTitle">Debug Display</string>
    <string name="settings_debugVerbositySummary">Select how much debug detailed you want to see.</string>
    <string name="settings_debugTitle">Debug</string>
    <string name="settings_debugSummary">Would you like to enable debugging?</string>
    <string name="settings_soundTitle">Sound Alerts</string>
    <string name="settings_soundSummary">Announce new posted speeds, as you move between zones.</string>
    <string name="settings_activityServicesTitle">Google Activity Services</string>
    <string name="settings_activityServicesSummary">Auto launch app when driving is detected.</string>
    <string name="settings_launchTypeTitle">Auto Launch Mode</string>
    <string name="settings_launchTypeSummary">Normal mode or Float mode?</string>
    <string name="settings_userEmailTitle">Optional BCC Email address</string>
    <string name="settings_userEmailSummary">Add your email address to have yourself BCC on all data sent to Server</string>
    <string name="settings_userVersionTitle">Application Version</string>
    <string name="settings_userVersionSummary">This is the version number</string>
    <string name="settings_user_ttsSignFoundTitle">Sign Detected Alert</string>
    <string name="settings_user_ttsSignFoundSummary">This is spoken is announced when a sign is detected</string>
    <string name="settings_user_ttsSaluteTitle">Launch Greeting</string>
    <string name="settings_user_ttsSaluteSummary">This is spoken when the application is launched\nLeave blank to disable.</string>
    <string name="settings_FeedbackTitle">Send Anonymous Feedback</string>
    <string name="settings_FeedbackSummary">This allows you to send feedback through the Google Play Store, none of your personal details are sent.</string>
    <string name="settings_bExperimentalTitle">Experimental.</string>
    <string name="settings_bExperimentalSummary">Enable experimental camera settings,turn off is performance reduces.</string>
    <string name="settings_aboutAltruisticEngineersTitle">Altruistic Engineers Community</string>
    <string name="settings_aboutAltruisticEngineersSummary">Community is about using the power of millions of skilled people with a little spare time advancing solutions that can make the world better for it being here.</string>
    <string name="settings_aboutAltruisticTranslatorsTitle">Altruistic Translators Community</string>
    <string name="settings_aboutAltruisticTranslatorsSummary">using the power of millions of skilled people with a little spare time advancing solutions that can make the world better for it being here.</string>
    <string name="settings_aboutAltruisticEngineersUrl">https://plus.google.com/u/0/communities/105872240007781184868</string>
    <string name="settings_aboutAltruisticTranslatorsUrl">https://plus.google.com/u/0/communities/105559111385953530486</string>
    <string name="sendFeedback">Send Feedback</string>
    <string name="bMenu">TouchMe</string>
    <string name="disabled">\u0020Disabled</string>
    <string name="enabled">&#160;Enabled</string>
    <string name="disable">Disable&#160;</string>
    <string name="enable">Enable&#160;</string>
    <string name="lightGreen">Detection</string>
    <string name="bShowVersion">Show Version</string>
    <string name="ttsSalute">OK, here we go!</string>
    <string name="ttslightGreen">I think the traffic is about to move!</string>
    <string name="ttsSignFound">Detected!</string>
    <string name="symbols">&#8722;   &#43;   &#177;   &#215;   &#247;   &#37;   &#137;   &#61;   &#8800;   &#8776;   &#8801;   &#60;   &#62;   &#8804;   &#8805;   &#8734;   &#8539;   &#188;   &#8540;   &#189;   &#8541;   &#190;   &#8542;   &#8747;   &#8706;   &#8710;   &#8719;   &#8721;   &#8730;   &#8735;   &#8745;   &#8729;   &#131;   &#8260;   "</string>
    <string name="app_name">SpeedZone</string>
    <string name="menu_float">Float</string>
    <string name="settings_Alert_Key">settings_Point_Key </string>
    <string name="SpeakAlertSpeedChange">the Speed Limit is now </string>
    <string name="SpeakAlertSpeedChangeSpeeding">check your speed</string>
    <string name="SpeakAlertSpeed1point">your risking one point and $106</string>
    <string name="SpeakAlertSpeed3points">your risking three point and $248 </string>
    <string name="SpeakAlertSpeed4points">your risking four point and $425 </string>
    <string name="SpeakAlertSpeed5points">your risking five point and $815 </string>
    <string name="SpeakAlertSpeed6points">your risking your license and $2,197 </string>
    <string name="getSpeedURL">http://220.233.25.75/mydb2.php</string>
    <string name="getNextSpeedURL">http://220.233.25.75/mynext.php</string>
    <string name="whatsnew">0.0.30/n bug fixes /n0.0.29/n
    Added a setting to prevent auto launch while on battery, RED popup says when this is preventing the app from launching</string>
    <string name="fancy">Fancy Display</string>
    <string name="thres">Threshold</string>
    <string name="debug">Debug</string>
    <string name="erode">Erode</string>
    <string name="dilate">Dilate x2</string>
    <string name="email">Email Data</string>
    <string name="popup">Adjust Threshold Level</string>
    <string name="misc">Misc</string>
    <string name="mute_vol">Mute</string>
    <string name="unmute_vol">Unmute</string>
    <string name="MyNextWeb">http://220.233.25.75/speed/mynext.php</string>
    <string name="MyPOIWeb">http://220.233.25.75/speed/mydbpoi.php</string>
    <string name="MyDbWeb">http://220.233.25.75/speed/mydb.php</string>
    <string name="myUUID">UUID</string>
    <string name="settings_soundKey">settings_soundKey</string>
    <string name="settings_debugKey">settings_debugKey</string>
    <string name="settings_activityServicesKey">settings_activityServicesKey</string>
    <string name="settings_activityPowerKey">settings_activityPowerKey</string>
    <string name="settings_launchTypeKey">settings_launchTypeKey</string>
    <string name="log_message">Log: timestamp: %1$s type %2$s confidence %3$d</string>
    <string name="connected">Connected to Location Services</string>
    <string name="disconnected">Disconnected from Location Services</string>
    <string name="connection_failed">Connection to service failed: error code %1$d</string>
    <string name="log_file_deletion_error">Log file deletion error.</string>
    <string name="notification_title">You are moving</string>
    <string name="turn_on_GPS">Click to turn on GPS, or swipe to ignore</string>
    <string name="activity_updates_requested">Activity updates requested</string>
    <string name="service_not_connected">Not connected to Location Services</string>
    <string name="activity_updates_stop">Stopping activity update requests</string>
    <string name="menu_item_clearlog">Clear Log</string>
    <string name="menu_item_showlog">Show Log</string>
    <string name="logs_deleted">Log file(s) deleted</string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="unknown">--Unknown--</string>
    <string name="no_log_data">No log data is available</string>
    <string name="activity_recognition_error_detail">
        Activity recognition error, code %1$d message %2$s.
    </string>
    <string name="date_format_error">Internal error: date formatting exception.</string>
    <string name="log_filename">%1$s%2$s%3$d%4$s</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="settings_PointLossKey_Summary">Alert me if I am at risk of losing demerit points</string>
    <string name="settings_PointLossKey_Title">Demerit Points Alert</string>
    <string name="settings_activityPowerSummary">Launch the app even if power is not connected?</string>
    <string name="settings_activityPowerTitle">Launch if no Power</string>
</resources>