<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<PreferenceCategory-->
    <!--android:title="@string/settings_aboutTitle">-->
    <!--<PreferenceScreen-->


    <!--android:title="@string/settings_FeedbackTitle"-->
    <!--android:summary="@string/settings_FeedbackSummary">-->
    <!--<intent android:action="SendFeedBackActivity"/>-->


    <!--</PreferenceScreen>-->
    <!--</PreferenceCategory>-->

    <PreferenceCategory android:title="@string/settings_Alert_title">


        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/settings_soundKey"
            android:title="@string/settings_soundTitle"
            android:summary="@string/settings_soundSummary" />

        <ListPreference
            android:dependency="@string/settings_soundKey"
            android:key="@string/settings_Alert_Key"
            android:title="@string/settings_PointLossKey_Title"
            android:summary="@string/settings_PointLossKey_Summary"
            android:entries="@array/pointAlert"
            android:entryValues="@array/point_values"
            android:defaultValue="3" />


        <EditTextPreference
            android:dependency="@string/settings_soundKey"
            android:key="@string/settings_ttsSaluteKey"
            android:summary="@string/settings_user_ttsSaluteSummary"
            android:title="@string/settings_user_ttsSaluteTitle"
            android:dialogTitle="@string/settings_user_ttsSaluteTitle"
            android:dialogMessage="@string/settings_user_ttsSaluteSummary"
            android:inputType="text"
            android:defaultValue="@string/ttsSalute" />


        <!--<ListPreference-->
        <!--android:dependency="@string/settings_displayKey"-->
        <!--android:dialogTitle="@string/settings_debugVerbosityTitle"-->
        <!--android:title="@string/settings_debugVerbosityTitle"-->
        <!--android:summary="@string/settings_debugVerbositySummary"-->
        <!--android:key="@string/settings_debugVerbosityKey"-->
        <!--android:defaultValue="0"-->
        <!--android:entries="@array/debugVerbosity"-->
        <!--android:entryValues="@array/debugVerbosityValue"-->
        <!--/>-->

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_Settings_title">


        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/settings_activityServicesKey"
            android:title="@string/settings_activityServicesTitle"
            android:summary="@string/settings_activityServicesSummary" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="@string/settings_activityServicesKey"
            android:key="@string/settings_activityPowerKey"
            android:title="@string/settings_activityPowerTitle"
            android:summary="@string/settings_activityPowerSummary" />

        <ListPreference
            android:dependency="@string/settings_activityServicesKey"
            android:key="@string/settings_launchTypeKey"
            android:title="@string/settings_launchTypeTitle"
            android:summary="@string/settings_launchTypeSummary"
            android:entries="@array/opts"
            android:entryValues="@array/opts_values"
            android:defaultValue="1" />


        <!--<ListPreference-->
        <!--android:dependency="@string/settings_displayKey"-->
        <!--android:dialogTitle="@string/settings_debugVerbosityTitle"-->
        <!--android:title="@string/settings_debugVerbosityTitle"-->
        <!--android:summary="@string/settings_debugVerbositySummary"-->
        <!--android:key="@string/settings_debugVerbosityKey"-->
        <!--android:defaultValue="0"-->
        <!--android:entries="@array/debugVerbosity"-->
        <!--android:entryValues="@array/debugVerbosityValue"-->
        <!--/>-->

    </PreferenceCategory>


    <!--<PreferenceCategory android:title="@string/settings_Features_title">-->
    <!--<CheckBoxPreference-->
    <!--android:defaultValue="false"-->
    <!--android:key="@string/settings_alertOnGreenLightEnabledKey"-->
    <!--android:title="@string/settings_alertOnGreenLightEnabledTitle"-->
    <!--android:summary="@string/settings_alertOnGreenLightEnabledSummary"/>-->
    <!--</PreferenceCategory>-->

    <PreferenceCategory android:title="@string/settings_Options_title">
        <!--<EditTextPreference-->
        <!--android:key="@string/settings_userEmailKey"-->
        <!--android:title="@string/settings_userEmailTitle"-->
        <!--android:summary="@string/settings_userEmailSummary"-->

        <!--android:dialogTitle="@string/settings_userEmailTitle"-->
        <!--android:inputType="textEmailAddress"-->
        <!--android:dialogMessage="@string/settings_userEmailSummary"-->
        <!--android:defaultValue=""/>-->

        <!--<EditTextPreference-->
        <!--android:key="@string/settings_ttsSignFoundKey"-->
        <!--android:title="@string/settings_user_ttsSignFoundTitle"-->
        <!--android:summary="@string/settings_user_ttsSignFoundSummary"-->
        <!--android:dialogTitle="@string/settings_user_ttsSignFoundTitle"-->
        <!--android:inputType="text"-->
        <!--android:dialogMessage="@string/settings_user_ttsSignFoundSummary"-->
        <!--android:defaultValue="@string/ttsSignFound"/>-->

        <!--<EditTextPreference-->
        <!--android:key="@string/settings_ttsSaluteKey"-->
        <!--android:summary="@string/settings_user_ttsSaluteSummary"-->
        <!--android:title="@string/settings_user_ttsSaluteTitle"-->
        <!--android:dialogTitle="@string/settings_user_ttsSaluteTitle"-->
        <!--android:dialogMessage="@string/settings_user_ttsSaluteSummary"-->
        <!--android:inputType="text"-->
        <!--android:defaultValue="@string/ttsSalute"/>-->
    </PreferenceCategory>


    <PreferenceScreen
        android:title="@string/settings_userPrivacyTitle"
        android:summary="@string/settings_userPrivacySummary" />


    <PreferenceCategory android:title="@string/settings_aboutTitle">
        <PreferenceScreen
            android:title="@string/settings_aboutAltruisticEngineersTitle"
            android:icon="@drawable/location_web_site"
            android:summary="@string/settings_aboutAltruisticTranslatorsSummary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/settings_aboutAltruisticEngineersUrl" />
        </PreferenceScreen>

        <PreferenceScreen
            android:title="@string/settings_aboutAltruisticTranslatorsTitle"
            android:icon="@drawable/location_web_site"
            android:summary="@string/settings_aboutAltruisticTranslatorsSummary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/settings_aboutAltruisticTranslatorsUrl" />
        </PreferenceScreen>


    </PreferenceCategory>


    <!--<PreferenceScreen android:title="Advanced Options">-->

    <!--<CheckBoxPreference-->
    <!--android:key="Advanced_Option"-->
    <!--android:title="Advanced Option"-->
    <!--android:defaultValue="true"-->
    <!--android:summary="SUMMARY_Advanced_Option"/>-->

    <!--</PreferenceScreen>-->


    <!--<com.anthonykeane.speedzone.SeekBarPreference-->
    <!--android:key="customPref"-->
    <!--android:defaultValue="32"-->
    <!--android:title="@string/settings_aboutTitle"-->
    <!--android:summary="@string/settings_aboutSummary"/>-->

    <!--<EditTextPreference-->
    <!--android:key="@string/settings_VersionKey"-->
    <!--android:title="@string/settings_userVersionTitle"-->
    <!--android:summary="@string/settings_userVersionSummary"-->
    <!--android:dialogTitle="@string/settings_userVersionTitle"-->
    <!--android:inputType="text"-->
    <!--android:dialogMessage="@string/settings_userVersionSummary"-->
    <!--android:editable="false"-->
    <!--android:defaultValue=""/>-->


    <!--<PreferenceCategory android:title="@string/sendFeedback">-->
    <!--<PreferenceScreen-->
    <!--android:title="@string/settings_FeedbackTitle"-->
    <!--android:summary="@string/settings_FeedbackSummary">-->
    <!--<intent android:action="SendFeedBackActivity"/>-->


    <!--</PreferenceScreen>-->
    <!--</PreferenceCategory>-->
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/settings_debugKey"
        android:title="@string/settings_debugTitle"
        android:summary="@string/settings_debugSummary" />

</PreferenceScreen>


