<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_aboutTitle">
        <PreferenceScreen
            android:title="@string/settings_aboutAltruisticEngineersTitle"
            android:icon="@drawable/location_web_site"
            android:summary="@string/settings_aboutAltruisticTranslatorsSummary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/settings_aboutAltruisticEngineersUrl"/>
        </PreferenceScreen>

        <PreferenceScreen
            android:title="@string/settings_aboutAltruisticTranslatorsTitle"
            android:icon="@drawable/location_web_site"
            android:summary="@string/settings_aboutAltruisticTranslatorsSummary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/settings_aboutAltruisticTranslatorsUrl"/>
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>